@@ -1,3 +1,10 @@
+2005-07-27  Sam Steingold  <sds@gnu.org>
+
+	* condition.lisp (eval-loaded-form): accept a FILE argument and
+	make the :REPORTs more informative
+	* init.lisp (eval-loaded-form) [preliminary]: accept and ignore FILE
+	(load): pass *LOAD-TRUENAME* to EVAL-LOADED-FORM as FILE
+
 2005-07-25  Sam Steingold  <sds@gnu.org>
 
 	* modules/clx/new-clx/clx.f (ensure_living_display): avoid
